add security and authentication
add spring security with jwt token
add sign in and sign up functions
update for access control
delete role member

--- a/mz-librarymanagement - start/mz-librarymanagement/src/main/resources/application.properties
+++ b/mz-librarymanagement - start/mz-librarymanagement/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=mz-librarymanagement
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
+
+# properties for jwt
+spring.app.jwtSecret=mySecretKey123123djakjfaweojfndklnvkaejfoaejfndklvnaedfef
+spring.app.jwtExpirationMs=3000000
+#logging.level.org.springframework.beans.factory=DEBUG
+
+#logging.level.org.springframework.security=DEBUG
